--- a/src/main/resources/edu/ib/projekt_bazy_danych_v2/panel_uzytkownika.fxml
+++ b/src/main/resources/edu/ib/projekt_bazy_danych_v2/panel_uzytkownika.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ib.projekt_bazy_danych_v2.StartController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ib.projekt_bazy_danych_v2.UzytkownikController">
    <top>
         <GridPane BorderPane.alignment="CENTER">
             <columnConstraints>
@@ -32,13 +32,13 @@
                   <Insets bottom="5.0" left="10.0" />
                </GridPane.margin>
             </Text>
-            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+            <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
               <columns>
-                <TableColumn prefWidth="122.4000244140625" text="Nazwa szczepienia" />
-                <TableColumn text="Producent" />
-                  <TableColumn prefWidth="46.4000244140625" text="Data" />
-                  <TableColumn prefWidth="71.99993896484375" text="Godzina" />
-                  <TableColumn prefWidth="76.79998779296875" text="Status" />
+                <TableColumn fx:id="tcNazwa" prefWidth="122.4000244140625" text="Nazwa szczepienia" />
+                <TableColumn fx:id="tcProducent" text="Producent" />
+                  <TableColumn fx:id="tcData"  prefWidth="46.4000244140625" text="Data" />
+                  <TableColumn fx:id="tcGodzina" prefWidth="71.99993896484375" text="Godzina" />
+                  <TableColumn fx:id="tcStatus" prefWidth="76.79998779296875" text="Status" />
               </columns>
             </TableView>
             </children>
