--- a/src/main/resources/edu/ib/projekt_bazy_danych_v2/panel_uzytkownika.fxml
+++ b/src/main/resources/edu/ib/projekt_bazy_danych_v2/panel_uzytkownika.fxml
@@ -2,49 +2,124 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ib.projekt_bazy_danych_v2.UzytkownikController">
-   <top>
-        <GridPane BorderPane.alignment="CENTER">
+<?import javafx.scene.control.ComboBox?>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ib.projekt_bazy_danych_v2.UzytkownikController">
+    <top>
+        <GridPane maxHeight="500.0" maxWidth="700.0" minHeight="500.0" minWidth="700.0" prefHeight="500.0" prefWidth="700.0" BorderPane.alignment="CENTER">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="385.400048828125" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="700.0" minWidth="10.0" prefWidth="385.400048828125" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="148.8" minHeight="10.0" prefHeight="60.59998397827148" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="98.19998550415039" minHeight="0.0" prefHeight="47.2" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="192.8" minHeight="10.0" prefHeight="192.8" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="222.39998779296874" minHeight="10.0" prefHeight="191.99998168945314" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="211.99997558593753" minHeight="0.0" prefHeight="44.000018310546864" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="291.2" minHeight="10.0" prefHeight="265.6" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="177.0" text="Zapisz się na szczepionke xd" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Moje szczepienia:" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets bottom="5.0" left="10.0" />
-               </GridPane.margin>
-            </Text>
-            <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
-              <columns>
-                <TableColumn fx:id="tcNazwa" prefWidth="122.4000244140625" text="Nazwa szczepienia" />
-                <TableColumn fx:id="tcProducent" text="Producent" />
-                  <TableColumn fx:id="tcData"  prefWidth="46.4000244140625" text="Data" />
-                  <TableColumn fx:id="tcGodzina" prefWidth="71.99993896484375" text="Godzina" />
-                  <TableColumn fx:id="tcStatus" prefWidth="76.79998779296875" text="Status" />
-              </columns>
-            </TableView>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Moje szczepienia:" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                    <GridPane.margin>
+                        <Insets bottom="10.0" left="20.0" />
+                    </GridPane.margin>
+                </Text>
+                <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                    <columns>
+                        <TableColumn fx:id="tcNazwa" prefWidth="168.79999387264252" text="Nazwa szczepienia" />
+                        <TableColumn fx:id="tcProducent" prefWidth="120.79998779296875" text="Producent" />
+                        <TableColumn fx:id="tcData" minWidth="0.0" prefWidth="107.199951171875" text="Data" />
+                        <TableColumn fx:id="tcGodzina" prefWidth="168.00003051757812" text="Godzina" />
+                        <TableColumn fx:id="tcStatus" prefWidth="133.60003662109375" text="Status" />
+                    </columns>
+                </TableView>
+                <HBox alignment="CENTER_LEFT" prefHeight="173.0" prefWidth="712.0">
+                    <children>
+                        <VBox alignment="BOTTOM_CENTER" minWidth="300.0" prefHeight="124.0" prefWidth="700.0">
+                            <children>
+                                <HBox alignment="CENTER" prefHeight="141.0" prefWidth="300.0">
+                                    <children>
+                                        <VBox alignment="CENTER" prefHeight="142.0" prefWidth="159.0">
+                                            <children>
+                                                <Button mnemonicParsing="false" text="Zapisz się" textAlignment="CENTER">
+                                                    <VBox.margin>
+                                                        <Insets bottom="10.0" />
+                                                    </VBox.margin>
+                                                </Button>
+                                                <Button mnemonicParsing="false" text="Wypisz się" />
+                                            </children>
+                                        </VBox>
+                                        <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="0.0">
+                                            <children>
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Data:">
+                                                    <VBox.margin>
+                                                        <Insets top="5.0" />
+                                                    </VBox.margin>
+                                                </Text>
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Godzina:">
+                                                    <VBox.margin>
+                                                        <Insets top="16.0" />
+                                                    </VBox.margin>
+                                                </Text>
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nazwa szczepienia:">
+                                                    <VBox.margin>
+                                                        <Insets top="16.0" />
+                                                    </VBox.margin>
+                                                </Text>
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Producent:">
+                                                    <VBox.margin>
+                                                        <Insets top="15.0" />
+                                                    </VBox.margin>
+                                                </Text>
+                                            </children>
+                                            <opaqueInsets>
+                                                <Insets />
+                                            </opaqueInsets>
+                                            <HBox.margin>
+                                                <Insets right="7.0" />
+                                            </HBox.margin>
+                                        </VBox>
+                                        <VBox prefHeight="200.0" prefWidth="150.0">
+                                            <children>
+                                                <ComboBox fx:id="cbData" prefWidth="150.0" />
+                                                <ComboBox prefWidth="150.0">
+                                                    <VBox.margin>
+                                                        <Insets top="7.0" />
+                                                    </VBox.margin>
+                                                </ComboBox>
+                                                <ComboBox prefWidth="150.0">
+                                                    <VBox.margin>
+                                                        <Insets top="7.0" />
+                                                    </VBox.margin>
+                                                </ComboBox>
+                                                <ComboBox prefWidth="150.0">
+                                                    <VBox.margin>
+                                                        <Insets top="7.0" />
+                                                    </VBox.margin>
+                                                </ComboBox>
+                                            </children>
+                                        </VBox>
+                                    </children>
+                                </HBox>
+                            </children>
+                        </VBox>
+                    </children>
+                </HBox>
             </children>
             <BorderPane.margin>
                 <Insets />
             </BorderPane.margin>
         </GridPane>
-   </top>
+    </top>
 </BorderPane>
