--- a/src/main/resources/edu/ib/projekt_bazy_danych_v2/panel_uzytkownika.fxml
+++ b/src/main/resources/edu/ib/projekt_bazy_danych_v2/panel_uzytkownika.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,7 +14,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.control.ComboBox?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ib.projekt_bazy_danych_v2.UzytkownikController">
     <top>
         <GridPane maxHeight="500.0" maxWidth="700.0" minHeight="500.0" minWidth="700.0" prefHeight="500.0" prefWidth="700.0" BorderPane.alignment="CENTER">
@@ -60,16 +59,11 @@
                                                 <Button mnemonicParsing="false" text="Wypisz się" />
                                             </children>
                                         </VBox>
-                                        <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="0.0">
+                                        <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="0.0">
                                             <children>
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Data:">
                                                     <VBox.margin>
                                                         <Insets top="5.0" />
-                                                    </VBox.margin>
-                                                </Text>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Godzina:">
-                                                    <VBox.margin>
-                                                        <Insets top="16.0" />
                                                     </VBox.margin>
                                                 </Text>
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nazwa szczepienia:">
@@ -90,20 +84,15 @@
                                                 <Insets right="7.0" />
                                             </HBox.margin>
                                         </VBox>
-                                        <VBox prefHeight="200.0" prefWidth="150.0">
+                                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="150.0">
                                             <children>
-                                                <ComboBox fx:id="cbData" prefWidth="150.0" />
-                                                <ComboBox prefWidth="150.0">
+                                                <ComboBox fx:id="cbTermin" prefWidth="150.0" />
+                                                <ComboBox fx:id="cbNazwa" prefWidth="150.0">
                                                     <VBox.margin>
                                                         <Insets top="7.0" />
                                                     </VBox.margin>
                                                 </ComboBox>
-                                                <ComboBox prefWidth="150.0">
-                                                    <VBox.margin>
-                                                        <Insets top="7.0" />
-                                                    </VBox.margin>
-                                                </ComboBox>
-                                                <ComboBox prefWidth="150.0">
+                                                <ComboBox fx:id="cbProducent" prefWidth="150.0">
                                                     <VBox.margin>
                                                         <Insets top="7.0" />
                                                     </VBox.margin>
